apps/paperless-ngx/paperless-ngx/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - name: paperless-ngx
              containerPort: 8000
              hostPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
          livenessProbe:
            httpGet:
              path: /
              port: paperless-ngx
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-ngx-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-ngx-media
