apps/paperless-ngx/paperless-ngx/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photoview-service
  namespace: photoview
spec:
  type: ClusterIP
  selector:
    app: photoview
  ports:
    - protocol: TCP
      port: 8000
      targetPort: photoview
