apps/paperless-ngx/paperless-ngx/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    external-dns.alpha.kubernetes.io/my-target: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - paperless.k8s.jsteuernagel.de
      secretName: paperless-k8s-jsteuernagel-de-tls
  rules:
    - host: paperless.k8s.jsteuernagel.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: paperless-ngx-service
                port:
                  number: 80
